@@ -1,4 +1,4 @@
-# $NetBSD: Makefile,v 1.942 2012/11/27 11:32:17 ryoon Exp $
+# $NetBSD: Makefile,v 1.943 2012/11/29 09:40:41 ryoon Exp $
 #
 
 COMMENT=	Networking tools
@@ -242,6 +242,7 @@ SUBDIR+=	libbind
 SUBDIR+=	libcares
 SUBDIR+=	libdlna
 SUBDIR+=	libdmapsharing
+SUBDIR+=	libdmapsharing3
 SUBDIR+=	libdnet
 SUBDIR+=	libfetch
 SUBDIR+=	libgdata
