@@ -1,0 +1,63 @@
+@comment $NetBSD$
+include/libdmapsharing-3.0/libdmapsharing/daap-connection.h
+include/libdmapsharing-3.0/libdmapsharing/daap-record.h
+include/libdmapsharing-3.0/libdmapsharing/daap-share.h
+include/libdmapsharing-3.0/libdmapsharing/dacp-connection.h
+include/libdmapsharing-3.0/libdmapsharing/dacp-player.h
+include/libdmapsharing-3.0/libdmapsharing/dacp-share.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-connection.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-container-db.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-container-record.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-db.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-enums.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-gst-input-stream.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-md5.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-mdns-browser.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-mdns-publisher.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-record-factory.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-record.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-share.h
+include/libdmapsharing-3.0/libdmapsharing/dmap-structure.h
+include/libdmapsharing-3.0/libdmapsharing/dmap.h
+include/libdmapsharing-3.0/libdmapsharing/dpap-connection.h
+include/libdmapsharing-3.0/libdmapsharing/dpap-record.h
+include/libdmapsharing-3.0/libdmapsharing/dpap-share.h
+lib/libdmapsharing-3.0.la
+lib/pkgconfig/libdmapsharing-3.0.pc
+share/gtk-doc/html/libdmapsharing-3.0/api-index-full.html
+share/gtk-doc/html/libdmapsharing-3.0/browserapi.html
+share/gtk-doc/html/libdmapsharing-3.0/ch01.html
+share/gtk-doc/html/libdmapsharing-3.0/ch02.html
+share/gtk-doc/html/libdmapsharing-3.0/ch03.html
+share/gtk-doc/html/libdmapsharing-3.0/ch04.html
+share/gtk-doc/html/libdmapsharing-3.0/client-internals.html
+share/gtk-doc/html/libdmapsharing-3.0/coding-standards.html
+share/gtk-doc/html/libdmapsharing-3.0/connectedcb.html
+share/gtk-doc/html/libdmapsharing-3.0/containerdb.html
+share/gtk-doc/html/libdmapsharing-3.0/home.png
+share/gtk-doc/html/libdmapsharing-3.0/index.html
+share/gtk-doc/html/libdmapsharing-3.0/index.sgml
+share/gtk-doc/html/libdmapsharing-3.0/left.png
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-DAAPRecord.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-DMAPContainerDb.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-DMAPContainerRecord.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-DMAPDb.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-DMAPMdnsBrowser.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-DMAPRecord.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-DMAPRecordFactory.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-DPAPRecord.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-daap-share.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-dacp-share.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-dmap-connection.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-dmap-share.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-dpap-connection.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0-dpap-share.html
+share/gtk-doc/html/libdmapsharing-3.0/libdmapsharing-3.0.devhelp2
+share/gtk-doc/html/libdmapsharing-3.0/mediadb.html
+share/gtk-doc/html/libdmapsharing-3.0/object-tree.html
+share/gtk-doc/html/libdmapsharing-3.0/right.png
+share/gtk-doc/html/libdmapsharing-3.0/server-internals.html
+share/gtk-doc/html/libdmapsharing-3.0/serviceaddedcb.html
+share/gtk-doc/html/libdmapsharing-3.0/shareapi.html
+share/gtk-doc/html/libdmapsharing-3.0/style.css
+share/gtk-doc/html/libdmapsharing-3.0/up.png
